--- a/pong/templates/menu/login.html
+++ b/pong/templates/menu/login.html
@@ -1,28 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <title>L⬤GIN</title>
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="icon" href="img/Icon_pag.png">
-</head>
+    {% include 'menu/head.html'%}
 <body class="body-center text-center login_screen container-fluid">
 
-    <!--Barra de navegação para o voltar a página anterior + miniatura da logo-->
-    <header>
-        <div id="nav_superior">
-            <div class="col-6"> 
-                <a class="float-start menu-bt red-bt" href="index.html">
-                    <img src="img/arrow_back.svg" class="icon-bt" alt="Botão de voltar">
-                </a>
-            </div>
-            <div class="col-6">
-                <img class="float-end" id = "corner-logo" src="img/logo_big.png" alt="Logo Pong">
-            </div>
-        </div>
+    {% include 'menu/nav.html' %}
+
     </header>
 
     <!--Campo de preenchimento de login do usuário-->
