--- a/pong/templates/menu/leaderboard.html
+++ b/pong/templates/menu/leaderboard.html
@@ -1,30 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link rel="stylesheet" href="style/style.css">
-    <title>P⬤NG</title>
-    <link rel="icon" href="img/Icon_pag.png">
-</head>
+    {% include 'menu/head.html'%}
 
 <body class="container-fluid">
 
-    <!--Barra de navegação para o voltar a página anterior + miniatura da logo-->
-    <header>
-        <div class=row id="nav_superior">
-            <div class="col-6"> 
-                <a class="float-start menu-bt red-bt" href="index.html">
-                    <img src="img/arrow_back.svg" class="icon-bt" alt="Botão de voltar">
-                </a>
-            </div>
-            <div class="col-6">
-                <img class="float-end" id = "corner-logo" src="img/logo_big.png" alt="Logo Pong">
-            </div>
-        </div>
-    </header>
+    {% include 'menu/nav.html' %}
 
     <!--Tabela de Rankings-->
     <!--Futuramente a pessoa poderá escolher entre os rankings dos diferentes modos de jogo-->
