Adicionando gitignore e imagens nas páginas que faltavam

--- a/pong/templates/menu/modos_explicacao.html
+++ b/pong/templates/menu/modos_explicacao.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -12,7 +14,7 @@
         <div class="row justify-content-center ">
             
             <a class="final__gradient-button-1 col-2">
-                <img class="icon-bt" src="img/icon1.png" alt="Icone modo de jogo 1">
+                <img class="icon-bt" src="{% static 'img/icon1.png'%}" alt="Icone modo de jogo 1">
             </a>
             <div class="col-10 col-lg-8 align-self-center">
                 <header>
@@ -28,7 +30,7 @@
         <div class="row justify-content-center flex-md-row-reverse">
             
             <a class="final__gradient-button-1 col-2">
-                <img class="icon-bt" src="img/icon2.png" alt="Icone modo de jogo 1">
+                <img class="icon-bt" src="{% static 'img/icon2.png'%}" alt="Icone modo de jogo 1">
             </a>
 
             <div class="col-10 col-lg-8 align-self-center">
@@ -47,7 +49,7 @@
         <div class="row justify-content-center">
 
             <a class="final__gradient-button-1 col-2">
-                <img class="icon-bt" src="img/icon3.png" alt="Icone modo de jogo 1">
+                <img class="icon-bt" src="{% static 'img/icon3.png'%}" alt="Icone modo de jogo 1">
             </a>
             <div class="col-10 col-lg-8 align-self-center">
                 <header>
@@ -62,7 +64,7 @@
         <div class="row justify-content-center flex-md-row-reverse">
             
             <a class="final__gradient-button-1 col-2">
-                <img class="icon-bt" src="img/icon4.png" alt="Icone modo de jogo 1">
+                <img class="icon-bt" src="{% static 'img/icon4.png'%}" alt="Icone modo de jogo 1">
             </a>
             <div class="col-10 col-lg-8 align-self-center">
                 <header>
