--- a/pong/templates/menu/modos.html
+++ b/pong/templates/menu/modos.html
@@ -26,16 +26,16 @@
     <!--Futuramente mais utilidades serão adicionadas para facilitar a procura de salas de jogo...-->
     <!--a procura pela sala de amigos e até por partidas-->
     <div id="modos" class="row justify-content-center">
-        <a class="final__gradient-button-1 col-2" href="jogo/PONG.html">
+        <a class="final__gradient-button-1 col-2" href="{% url 'jogo'%}">
             <img class="img-fluid icon-bt" src="{% static 'img/icon1.png' %}" alt="Icone modo de jogo 1">
         </a>
-        <a class="final__gradient-button-1 col-2" href="jogo/PONG.html">
+        <a class="final__gradient-button-1 col-2" href="{% url 'jogo'%}">
             <img class="img-fluid icon-bt" src="{% static 'img/icon2.png' %}" alt="Icone modo de jogo 1">
         </a>
-        <a class="final__gradient-button-1 col-2" href="jogo/PONG.html">
+        <a class="final__gradient-button-1 col-2" href="{% url 'jogo'%}">
             <img class="img-fluid icon-bt" src="{% static 'img/icon3.png' %}" alt="Icone modo de jogo 1">
         </a>
-        <a class="final__gradient-button-1 col-2" href="jogo/PONG.html">
+        <a class="final__gradient-button-1 col-2" href="{% url 'jogo'%}">
             <img class="img-fluid icon-bt" src="{% static 'img/icon4.png' %}" alt="Icone modo de jogo 1">
         </a>
     </div>  
