--- a/pong/templates/PONG/PONG.html
+++ b/pong/templates/PONG/PONG.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html xmlns='http://www.w3.org/1999/xhtml' lang='' xml:lang=''>
 <head>
+
+	{% load static %}
 	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
-	<link id='-gd-engine-icon' rel='icon' type='image/png' href='favicon.png' />
+	<link id='-gd-engine-icon' rel='icon' type='image/png' href="{%static 'PONG/favicon.png' %}" />
 	<title>PONG</title>
 	<style type='text/css'>
 
@@ -14,6 +16,7 @@
 			padding: 0;
 			text-align: center;
 			background-color: black;
+			color: white;
 		}
 
 		#canvas {
@@ -115,6 +118,8 @@
 
 </head>
 <body>
+	A maneira que a engine exporta e o Django não se gostam muito, então upamos o joguinho em outro site :P <br>
+	<a href="https://lfzinho.itch.io/stylized-pong">link</a>
 	<canvas id='canvas'>
 		HTML5 canvas appears to be unsupported in the current browser.<br />
 		Please try updating or use a different browser.
@@ -134,7 +139,7 @@
 		<div id='status-notice' class='godot' style='display: none;'></div>
 	</div>
 
-	<script type='text/javascript' src='PONG.js'></script>
+	<script type='text/javascript' src="{%static 'PONG/PONG.js' %}"></script>
 	<script type='text/javascript'>//<![CDATA[
 
 		const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"executable":"PONG","experimentalVK":false,"fileSizes":{"PONG.pck":450416,"PONG.wasm":18140456},"gdnativeLibs":[]};
