Filtros, tags, e centralização da login

--- a/pong/static/styles/_leaderboards.scss
+++ b/pong/static/styles/_leaderboards.scss
@@ -1,6 +1,7 @@
 // Estilos da barra de navegação superior
 #nav_superior{
 padding: 10px;
+// margin: 0;
 position: relative;
 padding-bottom: 0px;
 height: 75px;
