--- a/pong/templates/menu/modos_explicacao.html
+++ b/pong/templates/menu/modos_explicacao.html
@@ -7,7 +7,7 @@
 
 <body class="container-fluid">
 
-    {% include 'menu/nav.html' %}
+    {% include 'menu/nav.html' with backLink="modos" %}
 
     <div class="explicacao">
     <!--Explicação rápida dos modos de jogo + botões para procurar por uma sala-->
