--- a/pong/templates/menu/index.html
+++ b/pong/templates/menu/index.html
@@ -16,10 +16,11 @@
         <div class="col-12 col-md-5 menu-item-list align-self-center flex-column">
             <a class="menu-bt" href = "{% url 'modos' %}"><i class="fas fa-table-tennis"></i> Play Game</a>
             <a class="menu-bt" href = "{% url 'leaderboards' %}"><i class="fas fa-stream"></i> Leaderboard</a>
+            <a class="menu-bt" href = "{% url 'analises_menu' %}"><i class="fas fa-stream"></i> Analises</a>
             <a id="profile-menu-btn" class="menu-bt" href = "{% url 'profile' %}"><i class="fas fa-sign-in-alt"></i> Profile</a>
             <a id="login-menu-btn" class="menu-bt" href = "{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Login</a>
 
-     </div>
+        </div>
 </div>
 
     <footer>
