pequena correção em menu de analises

--- a/pong/templates/menu/analises_menu.html
+++ b/pong/templates/menu/analises_menu.html
@@ -7,7 +7,7 @@
 <body class="container-fluid">
 
     <!--Barra de navegação para o voltar a página anterior + miniatura da logo-->
-    {% include 'menu/nav.html' with includeExplanation=True %}
+    {% include 'menu/nav.html' with includeExplanation=False %}
     
 
     <!--Botões para a seleção direta dos modos de jogo-->
