Add uma observação importante

--- a/pong/templates/sanches/index.html
+++ b/pong/templates/sanches/index.html
@@ -158,7 +158,15 @@
         </div>
     </div>
 
-    <br> 
+    <br><hr>
+
+    <div class="row justify-content-center">
+        <br>
+        <div class="col-6">
+            *obs: Os códigos dos gráficos estão em funções na view.
+        </div>
+    </div>
+
 </body>
 
 </html>
