Adição de minhas análises ja completas

--- a/pong/templates/sanches/index.html
+++ b/pong/templates/sanches/index.html
@@ -22,7 +22,7 @@
     <h1 class="h3 mb-3">Tabela para analises:</h1>
 
     <div class="row justify-content-center">
-        <div class="col-8" style="">
+        <div class = "tabela-fit">
         {{ partidas|safe }}
         </div>
     </div>
@@ -46,7 +46,7 @@
     <h1 class="h3 mb-3">Primeiras analises de dados</h1>
 
     <div class="row justify-content-center">
-        <div class="col-6" style="">
+        <div class = "tabela-fit">
         {{ descricao|safe }}
         </div>
     </div>
@@ -67,7 +67,7 @@
     <h1 class="h3 mb-3">Os dez melhores jogadores em pontuação</h1>
 
     <div class="row justify-content-center">
-        <div class="col-5" style="">
+        <div class = "tabela-fit">
         {{ por_jogador|safe }}
         </div>
     </div>
