--- a/pong/static/styles/style.css
+++ b/pong/static/styles/style.css
@@ -10,6 +10,10 @@ body {
   color: white;
 }
 
+.tabela-fit {
+	width: fit-content;
+}
+
 .body-center {
   display: -webkit-box;
   display: -ms-flexbox;
