--- a/pong/static/styles/style.scss
+++ b/pong/static/styles/style.scss
@@ -52,6 +52,10 @@ $translate-03: translate(0.3em, -0.3em) skew(-10deg, 0deg);
 	color: white;
   }
 
+.tabela-fit {
+	width: fit-content;
+}
+
 // Css de configuração do body do menu e do login
 .body-center{
 	display: flex;
