adiciona parte do texto pro treuke dar uma olhadinha

--- a/pong/templates/menu/analises_menu.html
+++ b/pong/templates/menu/analises_menu.html
@@ -21,7 +21,7 @@
                 <a class="menu-bt" href = "sanches/"><i class="fas fa-table-tennis"></i> Sanches</a>
                 <a class="menu-bt" href = "kayo/"><i class="fas fa-stream"></i> Kayo</a>
                 <a class="menu-bt" href = "{% url 'analises_menu' %}"><i class="fas fa-stream"></i> Treuke</a>
-                <a class="menu-bt" href = "{% url 'analises_menu' %}"><i class="fas fa-stream"></i> Laguardia</a>
+                <a class="menu-bt" href = "laguardia/"><i class="fas fa-stream"></i> Laguardia</a>
 
             </div>
         </div>
