--- a/pong/templates/menu/analises_menu.html
+++ b/pong/templates/menu/analises_menu.html
@@ -18,6 +18,7 @@
 
             <!--Coluna dos botões da página principal-->
             <div class="col-12 col-md-5 menu-item-list align-self-center flex-column">
+                <a class="menu-bt alert-bt" href = "{% url 'notas' %}"><i class="fas fa-stream"></i> Notas</a>
                 <a class="menu-bt" href = "sanches/"><i class="fas fa-table-tennis"></i> Sanches</a>
                 <a class="menu-bt" href = "kayo/"><i class="fas fa-stream"></i> Kayo</a>
                 <a class="menu-bt" href = "{% url 'analises_menu' %}"><i class="fas fa-stream"></i> Treuke</a>
