--- a/pong/templates/menu/analises_menu.html
+++ b/pong/templates/menu/analises_menu.html
@@ -20,7 +20,7 @@
             <div class="col-12 col-md-5 menu-item-list align-self-center flex-column">
                 <a class="menu-bt" href = "sanches/"><i class="fas fa-table-tennis"></i> Sanches</a>
                 <a class="menu-bt" href = "kayo/"><i class="fas fa-stream"></i> Kayo</a>
-                <a class="menu-bt" href = "{% url 'analises_menu' %}"><i class="fas fa-stream"></i> Treuke</a>
+                <a class="menu-bt" href = "{% url 'treuke-analise' %}"><i class="fas fa-stream"></i> Treuke</a>
                 <a class="menu-bt" href = "laguardia/"><i class="fas fa-stream"></i> Laguardia</a>
 
             </div>
