--- a/pong/templates/menu/index.html
+++ b/pong/templates/menu/index.html
@@ -29,14 +29,14 @@
             // Esse script serve apenas para simular o menu sendo diferente para quando alguém 
             // está logado ou não, alterando a exibição dos botões de login e profile.
             
-            const queryString = window.location.search;
-            const urlParams = new URLSearchParams(queryString);
-            const sim_logged = urlParams.get('simulate_logged')
-            if(sim_logged){
-                document.getElementById("login-menu-btn").remove()
-            }else{
-                document.getElementById("profile-menu-btn").remove()
-            }
+            // const queryString = window.location.search;
+            // const urlParams = new URLSearchParams(queryString);
+            // const sim_logged = urlParams.get('simulate_logged')
+            // if(sim_logged){
+            //     document.getElementById("login-menu-btn").remove()
+            // }else{
+            //     document.getElementById("profile-menu-btn").remove()
+            // }
         </script>
     </footer>
 
