--- a/pong/templates/menu/login.html
+++ b/pong/templates/menu/login.html
@@ -25,9 +25,9 @@
         </form>
 
         <!--Simulador do login-->
-        <a href="index.html?simulate_logged=y">Simular Login</a>
+        <!-- <a href="index.html?simulate_logged=y">Simular Login</a>
         <p>(Vai deixar você acessar a página Profile através do menu)</p>
-        
+         -->
         <footer>
             <script src="https://kit.fontawesome.com/a3b17821b3.js" crossorigin="anonymous"></script>
         </footer>
