--- a/pong/static/styles/style.scss
+++ b/pong/static/styles/style.scss
@@ -81,6 +81,10 @@ body.body-center{
 	}
 }
 
+.loading{
+	cursor: wait !important;
+}
+
 // Mudança da barra de rolamento do site como um todo
 ::-webkit-scrollbar {
 	width: 20px;
