--- a/pong/templates/menu/analises_menu.html
+++ b/pong/templates/menu/analises_menu.html
@@ -27,7 +27,12 @@
             </div>
         </div>
     </div>
-
+    <script>
+        bt=document.getElementsByClassName("menu-bt")
+        for (b=0;b<(bt.length);b++){
+            bt[b].addEventListener("click",function(e){e.target.classList.add("loading")})
+        }
+    </script>
 </body>
 
 </html>
