--- a/pong/static/styles/style.scss
+++ b/pong/static/styles/style.scss
@@ -85,6 +85,9 @@ body.body-center{
 	cursor: wait !important;
 }
 
+.img-plot{
+	max-width: 100%;
+}
 // Mudança da barra de rolamento do site como um todo
 ::-webkit-scrollbar {
 	width: 20px;
