--- a/pong/templates/menu/notas.html
+++ b/pong/templates/menu/notas.html
@@ -16,10 +16,10 @@
                 <ul>
                     <li>Os dados utilizados foram gerados artificialmente utilizando Pandas e Numpy (e um pouco do
                     suor do Kayo, pra escrever 200 nicks diferentes). </li>
-                    <li>O joguinho de Pong agora foi atualizado e está 231.7% mais divertido. </li>
-                    <li>As imagens dos gráficos estão sendo puxadas de pngs do static e não do próprio código
-                        pois a exportação saia com as configurações visuais muito diferentes do código original.
-                    (Pode ser removida)</li>
+                    <li>O joguinho de Pong agora foi atualizado e agora está 231.7% mais divertido. </li>
+                    <li>Em algumas páginas, as imagens dos gráficos estão sendo puxadas de pngs do static e não da
+                        análise em si pois torna o carregamento mais rápido e deixa a página mais estável.
+                    </li>
             </div>
         </div>
     </div>
